# qt-material-widgets

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  material-lib.pro  qt-material-widgets.pro
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
components/: CMakeLists.txt  appbar.cpp  appbar.h  appbar_p.h  autocomplete.cpp  autocomplete.h  autocomplete_internal.cpp  autocomplete_internal.h  autocomplete_p.h  avatar.cpp  avatar.h  avatar_p.h  badge.cpp  badge.h  badge_p.h  checkbox.cpp  checkbox.h  checkbox_p.h  circularprogress.cpp  circularprogress.h  circularprogress_internal.cpp  circularprogress_internal.h  circularprogress_p.h  components.pro  dialog.cpp  dialog.h  dialog_internal.cpp  dialog_internal.h  dialog_p.h  drawer.cpp  drawer.h  drawer_internal.cpp  drawer_internal.h  drawer_p.h  fab.cpp  fab.h  fab_p.h  flatbutton.cpp  flatbutton.h  flatbutton_internal.cpp  (+164 more)
components/layouts/: qtmaterialsnackbarlayout.h  qtmaterialsnackbarlayout_p.h  snackbarlayout.cpp  snackbarlayout.h  snackbarlayout_p.h
components/lib/: checkable.cpp  checkable.h  checkable_internal.cpp  checkable_internal.h  checkable_p.h  overlaywidget.cpp  overlaywidget.h  qtmaterialcheckable.cpp  qtmaterialcheckable.h  qtmaterialcheckable_internal.cpp  qtmaterialcheckable_internal.h  qtmaterialcheckable_p.h  qtmaterialconst.h  qtmaterialoverlaywidget.cpp  qtmaterialoverlaywidget.h  qtmaterialripple.cpp  qtmaterialripple.h  qtmaterialrippleoverlay.cpp  qtmaterialrippleoverlay.h  qtmaterialstatetransition.cpp  qtmaterialstatetransition.h  qtmaterialstatetransitionevent.h  qtmaterialstyle.cpp  qtmaterialstyle.h  qtmaterialstyle_p.h  qtmaterialtheme.cpp  qtmaterialtheme.h  qtmaterialtheme_p.h  ripple.cpp  ripple.h  rippleoverlay.cpp  rippleoverlay.h  statetransition.cpp  statetransition.h  statetransitionevent.h  style.cpp  style.h  style_p.h  theme.cpp  theme.h  (+1 more)
components/plugin/: materialtextfieldplugin.cpp  materialtextfieldplugin.h  materialtoggleplugin.cpp  materialtoggleplugin.h  plugintemplate.h  qtmaterialplugins.cpp  qtmaterialplugins.h  qtmaterialtabwidgetcontainerextension.cpp  qtmaterialtabwidgetcontainerextension.h  qtmaterialtabwidgetextensionfactory.cpp  qtmaterialtabwidgetextensionfactory.h  qtmaterialtabwidgetplugin.cpp  qtmaterialtabwidgetplugin.h
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  appbarsettingseditor.cpp  appbarsettingseditor.h  autocompletesettingseditor.cpp  autocompletesettingseditor.h  avatarsettingseditor.cpp  avatarsettingseditor.h  badgesettingseditor.cpp  badgesettingseditor.h  checkboxsettingseditor.cpp  checkboxsettingseditor.h  circularprogresssettingseditor.cpp  circularprogresssettingseditor.h  dialogsettingseditor.cpp  dialogsettingseditor.h  dividersettingseditor.cpp  dividersettingseditor.h  dividersettingsform.ui  drawersettingseditor.cpp  drawersettingseditor.h  examples.pro  fabsettingseditor.cpp  fabsettingseditor.h  flatbuttonsettingseditor.cpp  flatbuttonsettingseditor.h  iconbuttonsettingseditor.cpp  iconbuttonsettingseditor.h  main.cpp  mainwindow.cpp  mainwindow.h  menusettingseditor.cpp  menusettingseditor.h  plugindemoform.cpp  plugindemoform.h  plugindemoform.ui  progresssettingseditor.cpp  progresssettingseditor.h  radiobuttonsettingseditor.cpp  radiobuttonsettingseditor.h  raisedbuttonsettingseditor.cpp  (+13 more)
include/qt-material-widgets/: qt-material-widgets.hpp
include/qt-material-widgets/component/: qtmaterialappbar.h  qtmaterialautocomplete.h  qtmaterialavatar.h  qtmaterialbadge.h  qtmaterialcheckbox.h  qtmaterialcircularprogress.h  qtmaterialdialog.h  qtmaterialdrawer.h  qtmaterialfab.h  qtmaterialflatbutton.h  qtmaterialiconbutton.h  qtmaterialmenu.h  qtmaterialprogress.h  qtmaterialradiobutton.h  qtmaterialraisedbutton.h  qtmaterialscrollbar.h  qtmaterialslider.h  qtmaterialsnackbar.h  qtmaterialtabs.h  qtmaterialtextfield.h  qtmaterialtoggle.h
include/qt-material-widgets/lib/: qtmaterialcheckable.h  qtmaterialoverlaywidget.h  qtmaterialripple.h  qtmaterialrippleoverlay.h  qtmaterialstatetransition.h  qtmaterialstatetransitionevent.h  qtmaterialstyle.h  qtmaterialtheme.h
source/component/: qtmaterialautocomplete_internal.cpp  qtmaterialautocomplete_p.h  qtmaterialcheckbox_p.h  qtmaterialdialog.cpp
source/lib/: qtmaterialripple.cpp  qtmaterialstyle.cpp
